--- a/temple-fontend/src/app/content/home/home.component.css
+++ b/temple-fontend/src/app/content/home/home.component.css
@@ -14,9 +14,14 @@
     border-radius: 10px;
 }
 
+
+
 .menu-card:hover {
     background: #b8860b;
     border-color: #b8860b;
+    transform:scale(1.05,1.05);
+    transition: 0.3s;   
+    /* color:white */
 }
 
 .img-menu {
