--- a/temple-fontend/src/app/content/home/home.component.html
+++ b/temple-fontend/src/app/content/home/home.component.html
@@ -252,7 +252,7 @@
                 <div class="ui-g">
                     <div class="ui-g-12 ui-lg-12 ui-md-4 ui-sm-4 ">
                         <img class="img-menu" src="./assets/images/Dashboard.png" alt>
-                    </div>
+                    </div>หหหห
                     <div class="ui-g-12 ui-lg-12 ui-md-8 ui-sm-8">
                         <div class="text-center">สรุปผลข้อมูล</div>
                     </div>
